Added age to overview Changed 3d to text Moved back button to header(needs to be removed from first 2 pages) Spacing to order tickets table and max 10 tickets and min 1 ticket

--- a/Sprint123/WebUI/Views/Pin/Pay.cshtml
+++ b/Sprint123/WebUI/Views/Pin/Pay.cshtml
@@ -5,9 +5,9 @@
 }
 <div class="form-horizontal">
     <h4>Pin Invoeren om te betalen</h4>
-    <div>
+    @*<div>
         <input action="action" class="btn btn-success" type="button" value="Terug naar vorige scherm" onclick="window.history.go(-1); return false;" />
-    </div>
+    </div>*@
     <hr />
         <div class="container">
             <div class="col-md-offset-4 col-md-4 col-md-offset-4" style="padding: 10px; border: solid medium green;">
