changes to payment and added seatselection view and controller in flow

--- a/Sprint123/WebUI/Views/SeatSelection/SelectSeats.cshtml
+++ b/Sprint123/WebUI/Views/SeatSelection/SelectSeats.cshtml
@@ -4,4 +4,4 @@
 
 <h2>SelectSeats</h2>
 
-@Html.ActionLink("Kiezen", "Confirm", "Confirmation", null, null)
+@Html.ActionLink("Stoeltjes", "ChooseSeats", "SeatSelection", null, null)
