--- a/Sprint123/WebUI/Views/Shared/_Layout.cshtml
+++ b/Sprint123/WebUI/Views/Shared/_Layout.cshtml
@@ -54,10 +54,9 @@
         </footer>*@
     </div>
     <!-- Begin Footer Avans -->
-    <footer class="social">
+    <footer class="card-footer">
         <div class="container">
-            <p class="copyright">&copy; @DateTime.Now.Year - IVH15</p>
-            <a href="/"><img src="~/Content/footer-logo90x30.png" alt="Avans Hogeschool" class="footerlogo" /></a>
+            <p style="color:aliceblue">&copy; @DateTime.Now.Year - IVH15</p><a href="/"><img src="~/Content/footer-logo90x30.png" alt="Avans Hogeschool" class="footerlogo" /></a>
         </div>
     </footer>
     <!-- End Footer Avans-->
