--- a/Sprint123/WebUI/Views/SeatSelection/SelectSeats.cshtml
+++ b/Sprint123/WebUI/Views/SeatSelection/SelectSeats.cshtml
@@ -4,8 +4,13 @@
     ViewBag.Title = "SelectSeats";
 }
 <body>
-    <h2>SelectSeats</h2>
-    @for (int i = 1; i <= Model.rowCount; i++)
+    <br />
+    <br />
+    <div class="text-center">
+        <img src="~/Content/sprite-screen.png">
+        <br />
+        <br />
+        @for (int i = 1; i <= Model.rowCount; i++)
     {
         foreach (var item in Model.showSeats)
         {
@@ -13,34 +18,70 @@
             {
                 if (item.IsTaken == true)
                 {
-                    <i>X</i>
-                }
-                else if (item.IsReserved == true)
+                    <img src="~/Content/sprite-red.png">
+            }
+            else if (item.IsReserved == true)
+            {
+                bool noCurrentReservation = true;
+                foreach (var j in Model.tickets)
                 {
-                    bool noCurrentReservation = true;
-                    foreach (var j in Model.tickets)
+                    if (item.SeatID == j.SeatID)
                     {
-                        if (item.SeatID == j.SeatID)
-                        {
-                            <i>C</i>
-                            noCurrentReservation = false;
-                            break;
-                        }
-                    }
-                    if (noCurrentReservation == true)
-                    {
-                        <i>R</i>
-                    }
-                }
-                else
-                {
-                    <i>S</i>
+                        <img src="~/Content/sprite-purple.png">
+                    noCurrentReservation = false;
+                    break;
                 }
             }
+            if (noCurrentReservation == true)
+            {
+                <img src="~/Content/sprite-blue.png">
         }
-        <br />
     }
-
-
-    @Html.ActionLink("Stoeltjes kiezen", "ChooseSeats", "SeatSelection", null, null)
+    else
+    {
+        <img src="~/Content/sprite-yellow.png">
+}
+}
+}
+    <br />
+}
+        <br />
+        <table align="center">
+            <tr>
+                <td>
+                    <img src="~/Content/sprite-yellow.png">
+                </td>
+                <td>
+                    Vrije stoelen
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <img src="~/Content/sprite-red.png">
+                </td>
+                <td>
+                    Bezette stoelen
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <img src="~/Content/sprite-blue.png">
+                </td>
+                <td>
+                    Gereserveerde stoelen
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <img src="~/Content/sprite-purple.png">
+                </td>
+                <td>
+                    Jouw selectie
+                </td>
+            </tr>
+        </table>
+        <br />
+        <br />
+        <button type="button" id="oneclick" class="btn btn-success" onclick="location.href='@Url.Action("ChooseSeats", "SeatSelection", null, null)';disableButton(this)">Naar betalen</button>
+    </div>
 </body>
