added start of test for filters, added real data(still needs real description), dynamic imdb score and video, filer for name,actor  director,genre and age

--- a/Sprint123/WebUI/Views/Pin/Pay.cshtml
+++ b/Sprint123/WebUI/Views/Pin/Pay.cshtml
@@ -62,7 +62,7 @@
                 <!--pin numpad END-->
                 @*<input type="submit" value="Betaal" class="btn btn-success" onclick="location.href='@Url.Action("PrintTickets","Reservation", Model)'">*@
                 <button type="button" id="oneclick" class="btn btn-success" onclick="location.href='@Url.Action("PrintTickets","Reservation")';disableButton(this)">Betaal &amp; Print Tickets</button>
-                <input action="action" class="btn btn-success" type="button" value="Start nieuwe bestelling" onclick="window.history.go(-4); return false;" />
+                @*<input action="action" class="btn btn-success" type="button" value="Start nieuwe bestelling" onclick="window.history.go(-4); return false;" />*@
             </div>
         </div>
     </div>
