--- a/Sprint123/WebUI/Views/UpcomingShow/Overview.cshtml
+++ b/Sprint123/WebUI/Views/UpcomingShow/Overview.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h2>Verwacht:</h2>
-<div class="align-content-center">
+<div class="align-content-center" style="color: brown">
     <div id="verwachtefilms" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -14,24 +14,24 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="d-block w-100" src="~/Content/pacific-rim-small.png" alt="First slide">
+                <img class="d-block w-100" src="~/Content/pacific-rim-uprising.jpg" alt="First slide">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Pacific Rim - Uprising</h5>
                     <p>De nieuwe spectaculaire 3D-actiefilm PACIFIC RIM UPRISING.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="~/Content/pacific-rim-small.png" alt="Second slide">
+                <img class="d-block w-100" src="~/Content/darkest-hour.jpg" alt="Second slide">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>Pacific Rim - Uprising</h5>
-                    <p>De nieuwe spectaculaire 3D-actiefilm PACIFIC RIM UPRISING.</p>
+                    <h5>Darkest Hour</h5>
+                    <p>De nieuwe spectaculaire film over Chruchill gespeeld door Gary Oldman.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="~/Content/pacific-rim-small.png" alt="Third slide">
+                <img class="d-block w-100" src="~/Content/the-shape-of-water.jpg" alt="Third slide">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Pacific Rim - Uprising</h5>
-                    <p>De nieuwe spectaculaire 3D-actiefilm PACIFIC RIM UPRISING.</p>
+                    <p>De oscarwinnende film over een magische zeewezen.</p>
                 </div>
             </div>
         </div>
@@ -49,10 +49,20 @@
 <h2>Deze Week in de bioscoop:</h2>
 @using (Html.BeginForm())
 {
-<p>
-    Zoek film op naam: @Html.TextBox("SearchString")
-    <input type="submit" class="btn btn-success" value="Search" />
-</p>    
+    <p>
+        Zoek op film, genre of regisseur: @Html.TextBox("SearchString")
+        @*Of zoek op datum:   !!!Not functional!!!                                                                
+        @Html.TextBox("Start", null, new { @class = "date-picker" }) @Html.TextBox("End", null, new { @class = "date-picker" })*@
+        <input type="submit" class="btn btn-success" value="Zoek films" />
+    </p>
+}
+@using (Html.BeginForm())
+{
+    @Html.RadioButton("Age", 4) <span>4</span>
+    @Html.RadioButton("Age", 6) <span>6</span>
+    @Html.RadioButton("Age", 12) <span>12</span>
+    @Html.RadioButton("Age", 16) <span>16+</span>
+       <input type="submit" class="btn btn-success" value="Zoek films op leeftijd" />
 }
 <table class="table">
     <tr>
@@ -79,6 +89,9 @@
         </th>
         <th>
             <p>Leeftijd:</p>
+        </th>
+        <th>
+            <p>Genre:</p>
         </th>
         <th>
             <p>Aanvangstijd:</p>
@@ -122,7 +135,7 @@
                 @Html.DisplayFor(modelItem => item.Room.RoomID)
             </td>
             <td>
-                @if (item.Movie.Age == 16)
+                @if (item.Movie.Age >= 16)
                 {
                     <img src="~/Content/kijkwijzer-16.png" alt="16" height="25" width="25" />
                 }
@@ -138,6 +151,9 @@
                 {
                     <img src="~/Content/kijkwijzer-AL.png" alt="AL" height="25" width="25" />
                 }
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Movie.Genre)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.BeginTime)
