--- a/Sprint123/WebUI/Views/UpcomingShow/ShowDetails.cshtml
+++ b/Sprint123/WebUI/Views/UpcomingShow/ShowDetails.cshtml
@@ -4,93 +4,101 @@
     ViewBag.Title = "ShowDetails";
 }
 
-<h2></h2>
+@*<h2></h2>*@
 
 <div>
     <h4>@Html.DisplayFor(model => model.Movie.Name)</h4>
-    <hr />   
-    <!-- IMDB plugin BEGIN TO DO: change data-title for model.Movie.IMDB-->
-    <span class="imdbRatingPlugin" data-user="ur86663828" data-title="tt2557478" data-style="p4">
-        <a href="https://www.imdb.com/title/tt2557478/?ref_=plg_rt_1">
-            <img src="https://ia.media-imdb.com/images/G/01/imdb/plugins/rating/images/imdb_31x14.png" alt=" Pacific Rim: Uprising
-(2018) on IMDb" />
+    <!-- IMDB plugin BEGIN-->
+    <span class="imdbRatingPlugin" data-user="ur86663828" data-title="@Model.Movie.IMDB" data-style="p4">
+        <a href="@Model.Movie.Website">
+            <img src="~/Content/imdb_logo.png" alt="@Html.DisplayFor(model => model.Movie.Name)" />
         </a>
     </span>
     <script>(function (d, s, id) { var js, stags = d.getElementsByTagName(s)[0]; if (d.getElementById(id)) { return; } js = d.createElement(s); js.id = id; js.src = "https://ia.media-imdb.com/images/G/01/imdb/plugins/rating/js/rating.js"; stags.parentNode.insertBefore(js, stags); })(document, 'script', 'imdb-rating-api');</script>
     <!-- IMDB plugin END-->
+    <hr />
+
     <div class="container">
-    <div class="row">
-        <div class="col-sm">
-            <iframe width="420" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
-        </div>
-        <div class="col-sm">
-            One of three columns
-        </div>
-        <div class="col-sm">
-            One of three columns
+        <div class="row">
+            <div class="col-sm">
+                <img src="data:image;base64,@System.Convert.ToBase64String(Model.Movie.Image)" width="350" height="550" />
+            </div>            
+            <div class="col-sm">
+                <dl class="dl-vertical">
+                    <dt>
+                        Leeftijd
+                    </dt>
+                    <dd>
+                        @if (Model.Movie.Age >= 16)
+                        {
+                            <img src="~/Content/kijkwijzer-16.png" alt="16" height="25" width="25" />
+                        }
+                        else if (Model.Movie.Age == 12)
+                        {
+                            <img src="~/Content/kijkwijzer-12.png" alt="12" height="25" width="25" />
+                        }
+                        else if (Model.Movie.Age == 6)
+                        {
+                            <img src="~/Content/kijkwijzer-6.png" alt="6" height="25" width="25" />
+                        }
+                        else if (Model.Movie.Age < 6)
+                        {
+                            <img src="~/Content/kijkwijzer-AL.png" alt="AL" height="25" width="25" />
+                        }
+                    </dd>
+                    <dt>
+                        Type film(3D of normaal)
+                    </dt>
+                    <dd>
+                        @if (Model.Movie.Is3D == true)
+                        {
+                         <p>3D</p>
+                        }
+                        else
+                        {
+                        <p>Normaal</p>
+                        }
+                    </dd>
+                    <dt>
+                        Taal
+                    </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.Movie.Language)
+                    </dd>
+                    <dt>
+                        Hoofdacteurs
+                    </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.Movie.MainActors)
+                    </dd>
+                    <dt>
+                        Bijrollen
+                    </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.Movie.SubActors)
+                    </dd>
+                    <dt>
+                        Regisseur
+                    </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.Movie.Director)
+                    </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.Movie.Genre)
+                    </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.Movie.Genre)
+                    </dd>
+                </dl>
+                <p>
+                <button class="btn btn-success" type="button" onclick="location.href = '@Url.Action("OrderMovie", "UpcomingShow", new { id = Model.ShowID, secret = false}, null)'">Bestel kaartjes</button>
+            </p>
+            </div>
+            <div class="col-sm">                
+                <iframe width="400" height="300" src="@Model.Movie.Trailer"></iframe>
+            </div>
         </div>
     </div>
 </div>
-    <dl class="dl-vertical">
-        @*<dt>
-            @Html.DisplayNameFor(model => model.Room.RoomID)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Room.RoomID)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.BeginTime)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.BeginTime)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.EndTime)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.EndTime)
-        </dd>*@
-        <dt>
-            @Html.DisplayNameFor(model => model.Movie.Age)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Movie.Age)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Movie.Is3D)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Movie.Is3D)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Movie.Language)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Movie.Language)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Movie.MainActors)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Movie.MainActors)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Movie.SubActors)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Movie.SubActors)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Movie.Director)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Movie.Director)
-        </dd>
-    </dl>
-</div>
-<p>
-    @*@Html.ActionLink("Bestel", "OrderMovie2", new { id = Model.ShowID })*@
-    <button class="btn btn-success" type="button" onclick="location.href = '@Url.Action("OrderMovie", "UpcomingShow", new { id = Model.ShowID, secret = false}, null)'">Bestel kaartjes</button>
-    @*@Html.ActionLink("Back to List", "Index")*@
-</p>
+
 
