--- a/Sprint123/WebUI/Views/Ticket/AddPopcorn.cshtml
+++ b/Sprint123/WebUI/Views/Ticket/AddPopcorn.cshtml
@@ -1,4 +1,4 @@
-﻿@model  List<Domain.Entities.Ticket>
+﻿@model  List<Domain.Entities.TempTicket>
 
 @{
     ViewBag.Title = "AddPopcorn";
@@ -12,7 +12,7 @@
             <p>Kies bij welke tickets je popcorn wilt toevoegen.</p><br />
         </p>
         @using (Html.BeginForm("AddPopcorn", "Ticket", FormMethod.Post))
-    {
+        {
         <table align="center">
             <tr>
                 <th scope="col">Ticket Nummer</th>
@@ -26,7 +26,7 @@
                 j++;
             <tr>
                 <td>
-                    @j
+                    @j <p style="display:none">@Html.TextBoxFor(x => Model[i].ReservationID)</p>
                 </td>
                 <td>
                     €@Html.DisplayFor(x => Model[i].Price)
