--- a/Sprint123/WebUI/Views/Ticket/OrderTickets.cshtml
+++ b/Sprint123/WebUI/Views/Ticket/OrderTickets.cshtml
@@ -6,14 +6,16 @@
 <body>
     <div class="text-center">
         @*<p>*@
+        <br />
         <h2>Je bestelt nu tickets voor @ViewBag.MovieName</h2><br />
-        <p>Selecteer het aantal gewenste tickets.</p><br />
+        <p>Selecteer het aantal gewenste tickets.</p>
         <b>Let op:</b><p>Voor het studententarief dient een geldige studentenpas getoond te worden bij de ingang!</p>
         <b>Let op:</b><p>Bestel minimaal 1 en maximaal 10 tickets!</p>
         <p style="color:red"><b>@ViewBag.SoldOut</b></p>
         @*</p>*@
         @using (Html.BeginForm())
-    {
+        {
+        <p style="display:none">Reservering ID: @Html.DisplayFor(x => Model.reservationID) Show ID: @Html.DisplayFor(x => Model.showID) </p>
         <table align="center" style="border-spacing: 10px; border-collapse: separate;">
             <tr>
                 <th scope="col">Type ticket</th>
