--- a/Sprint123/WebUI/Views/Reservation/DisplayReservation.cshtml
+++ b/Sprint123/WebUI/Views/Reservation/DisplayReservation.cshtml
@@ -51,7 +51,7 @@
             </tr>
     }
         </table>
-        <button class="btn btn-success" type="button" id="oneclick" onclick="location.href = '@Url.Action("PrintReservationTickets", "Reservation", Model)';disableButton(this)">Print je tickets!</button>
+        <button class="btn btn-success" type="button" id="oneclick" onclick="location.href = '@Url.Action("PrintReservationTickets", "Reservation", new { reservationID = Model.FirstOrDefault().ReservationID })';disableButton(this)">Print je tickets!</button>
         <input action="action" class="btn btn-success" type="button" value="Start nieuwe bestelling" onclick="window.history.go(-2); return false;" />
     </div>
 </body>
