--- a/Sprint123/WebUI/Views/UpcomingShow/Overview.cshtml
+++ b/Sprint123/WebUI/Views/UpcomingShow/Overview.cshtml
@@ -7,166 +7,187 @@
     <br />
     <button class="btn btn-success" type="button" onclick="location.href = '@Url.Action("Reservation", "Reservation")'">Haal hier u Reservering op</button> <h2>Verwachte films:</h2>
 </div>
-    <div class="align-content-center" style="color: brown">
-        <div id="verwachtefilms" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img class="d-block w-100" src="~/Content/pacific-rim-uprising.jpg" alt="First slide">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Pacific Rim - Uprising</h5>
-                        <p>De nieuwe spectaculaire 3D-actiefilm PACIFIC RIM UPRISING.</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100" src="~/Content/darkest-hour.jpg" alt="Second slide">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Darkest Hour</h5>
-                        <p>De nieuwe spectaculaire film over Chruchill gespeeld door Gary Oldman.</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100" src="~/Content/the-shape-of-water.jpg" alt="Third slide">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Pacific Rim - Uprising</h5>
-                        <p>De oscarwinnende film over een magische zeewezen.</p>
-                    </div>
+<div class="align-content-center" style="color: brown">
+    <div id="verwachtefilms" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="d-block w-100" src="~/Content/pacific-rim-uprising.jpg" alt="First slide">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5 style="color: ghostwhite; background-color: black;">Pacific Rim - Uprising</h5>
+                    <p style="color: ghostwhite; background-color: black;">De nieuwe spectaculaire 3D-actiefilm PACIFIC RIM UPRISING.</p>
                 </div>
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="~/Content/darkest-hour.jpg" alt="Second slide">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5 style="color: ghostwhite; background-color: black;">Darkest Hour</h5>
+                    <p style="color: ghostwhite; background-color: black;">De nieuwe spectaculaire film over Churchill gespeeld door Gary Oldman.</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="~/Content/the-shape-of-water.jpg" alt="Third slide">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5 style="color: ghostwhite; background-color: black;">Pacific Rim - Uprising</h5>
+                    <p style="color: ghostwhite; background-color: black;">De oscarwinnende film over een magisch zeewezen.</p>
+                </div>
+            </div>
         </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
     </div>
+</div>
 
-    <h2>Deze Week in de bioscoop:</h2>
-    @using (Html.BeginForm())
-    {
-        <p>
-            Zoek op film, genre of regisseur: @Html.TextBox("SearchString")
-            @*Of zoek op datum:   !!!Not functional!!!
-                @Html.TextBox("Start", null, new { @class = "date-picker" }) @Html.TextBox("End", null, new { @class = "date-picker" })*@
-            <input type="submit" class="btn btn-success" value="Zoek films" />
-        </p>
-    }
-    @using (Html.BeginForm())
-    {
-        @Html.RadioButton("Age", 4) <span>4</span>
-        @Html.RadioButton("Age", 6) <span>6</span>
-        @Html.RadioButton("Age", 12) <span>12</span>
-        @Html.RadioButton("Age", 16) <span>16+</span>
-        <input type="submit" class="btn btn-success" value="Zoek films op leeftijd" />
-    }
-    <table class="table">
-        <tr>
-            <th>
-                <!--Image-->
-            </th>
-            <th>
-                <p>Naam film:</p>
-            </th>
-            <th>
-                <p>3D:</p>
-            </th>
-            <th>
-                <p>Taal:</p>
-            </th>
-            <th>
-                <p>Ondertiteling:</p>
-            </th>
-            <th>
-                <p>Lengte:</p>
-            </th>
-            <th>
-                <p>Zaal:</p>
-            </th>
-            <th>
-                <p>Leeftijd:</p>
-            </th>
-            <th>
-                <p>Genre:</p>
-            </th>
-            <th>
-                <p>Aanvangstijd:</p>
-            </th>
-            <th>
-                <p>Eindtijd:</p>
-            </th>
-            <th></th>
-        </tr>
-
-        @foreach (var item in Model)
-        {
+<h2>Deze Week in de bioscoop:</h2>
+<div class="tooltip">genre<span class="tooltiptext">actie, misdaad, historisch...</span></div>
+<div class="container">
+    <div class="row">
+        <div class="col-sm">
+         @using (Html.BeginForm())
+          {
+            <p>
+                Zoek op film,genre of regisseur: @Html.TextBox("SearchString")
+                @*Of zoek op datum:   !!!Not functional!!!*@
+                @* @Html.TextBox("End", null, new { @class = "date-picker" })*@
+                <input type="submit" class="btn btn-success" value="Zoek films" />
+            </p>
+          }
+        </div>
+        <div class="col-sm">
+        @using (Html.BeginForm())
+         {
+            <p>
+                Zoek op datum: <br> @Html.TextBox("Start", null, new { @class = "date-picker" })
+                <input type="submit" class="btn btn-success" value="Zoek films" />
+            </p>
+         }
+        </div>   
+        <div class="col-sm">
+        @using (Html.BeginForm())
+         {
+            <p>
+                Zoek op leeftijd:<br>
+                @Html.RadioButton("Age", 4) <span>4</span>
+                @Html.RadioButton("Age", 6) <span>6</span>
+                @Html.RadioButton("Age", 12) <span>12</span>
+                @Html.RadioButton("Age", 16) <span>16+</span>
+                <input type="submit" class="btn btn-success" value="Zoek films" />
+            </p>
+         }
+       </div>
+   </div>
+</div>
+        <table class="table">
             <tr>
-                <td>
-                    @*@Html.DisplayFor(modelItem => item.Movie.Image)*@
-                    <img src="data:image;base64,@System.Convert.ToBase64String(item.Movie.Image)" width="60" height="80" />
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Movie.Name)
-                </td>
-                <td>
-                    @if (item.Movie.Is3D == true)
-                    {
-                        <p>3D</p>
-                    }
-                    else
-                    {
-                        <p></p>
-                    }
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Movie.Language)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Movie.LanguageSub)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Movie.Length)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Room.RoomID)
-                </td>
-                <td>
-                    @if (item.Movie.Age >= 16)
-                    {
-                        <img src="~/Content/kijkwijzer-16.png" alt="16" height="25" width="25" />
-                    }
-                    else if (item.Movie.Age == 12)
-                    {
-                        <img src="~/Content/kijkwijzer-12.png" alt="12" height="25" width="25" />
-                    }
-                    else if (item.Movie.Age == 6)
-                    {
-                        <img src="~/Content/kijkwijzer-6.png" alt="6" height="25" width="25" />
-                    }
-                    else if (item.Movie.Age < 6)
-                    {
-                        <img src="~/Content/kijkwijzer-AL.png" alt="AL" height="25" width="25" />
-                    }
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Movie.Genre)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.BeginTime)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.EndTime)
-                </td>
-                <td>
-                    <button class="btn btn-success" type="button" onclick="location.href = '@Url.Action("ShowDetails", "UpcomingShow", new { id = item.ShowID}, null)'">Bekijk</button>
-                </td>
+                <th>
+                    <!--Image-->
+                </th>
+                <th>
+                    <p>Naam film:</p>
+                </th>
+                <th>
+                    <p>3D:</p>
+                </th>
+                <th>
+                    <p>Taal:</p>
+                </th>
+                <th>
+                    <p>Ondertiteling:</p>
+                </th>
+                <th>
+                    <p>Lengte:</p>
+                </th>
+                <th>
+                    <p>Zaal:</p>
+                </th>
+                <th>
+                    <p>Leeftijd:</p>
+                </th>
+                <th>
+                    <p>Genre:</p>
+                </th>
+                <th>
+                    <p>Aanvangstijd:</p>
+                </th>
+                <th>
+                    <p>Eindtijd:</p>
+                </th>
+                <th></th>
             </tr>
-        }
 
-    </table>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @*@Html.DisplayFor(modelItem => item.Movie.Image)*@
+                        <img src="data:image;base64,@System.Convert.ToBase64String(item.Movie.Image)" width="60" height="80" />
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Movie.Name)
+                    </td>
+                    <td>
+                        @if (item.Movie.Is3D == true)
+                        {
+                            <p>3D</p>
+                        }
+                        else
+                        {
+                            <p></p>
+                        }
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Movie.Language)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Movie.LanguageSub)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Movie.Length)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Room.RoomID)
+                    </td>
+                    <td>
+                        @if (item.Movie.Age >= 16)
+                        {
+                            <img src="~/Content/kijkwijzer-16.png" alt="16" height="25" width="25" />
+                        }
+                        else if (item.Movie.Age == 12)
+                        {
+                            <img src="~/Content/kijkwijzer-12.png" alt="12" height="25" width="25" />
+                        }
+                        else if (item.Movie.Age == 6)
+                        {
+                            <img src="~/Content/kijkwijzer-6.png" alt="6" height="25" width="25" />
+                        }
+                        else if (item.Movie.Age < 6)
+                        {
+                            <img src="~/Content/kijkwijzer-AL.png" alt="AL" height="25" width="25" />
+                        }
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Movie.Genre)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.BeginTime)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.EndTime)
+                    </td>
+                    <td>
+                        <button class="btn btn-success" type="button" onclick="location.href = '@Url.Action("ShowDetails", "UpcomingShow", new { id = item.ShowID}, null)'">Bekijk</button>
+                    </td>
+                </tr>
+            }
+
+        </table>
