--- a/Sprint123/WebUI/Views/SeatSelection/SelectSeats.cshtml
+++ b/Sprint123/WebUI/Views/SeatSelection/SelectSeats.cshtml
@@ -83,6 +83,6 @@
         </table>
         <br />
         <br />
-        <button type="button" id="oneclick" class="btn btn-success" onclick="location.href='@Url.Action("ChooseSeats", "SeatSelection", new { reservationID = Model.tickets.FirstOrDefault().ReservationID })';disableButton(this)">Naar betalen</button>
+        <button type="button" id="oneclick" class="btn btn-success" onclick="location.href='@Url.Action("ChooseSeats", "SeatSelection", new { reservationID = Model.tickets.FirstOrDefault().ReservationID })';disableButton(this)">Naar bevestigen</button>
     </div>
 </body>
