--- a/Sprint123/WebUI/Views/Shared/_Layout.cshtml
+++ b/Sprint123/WebUI/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
     <script src="http://code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
     <script type='text/javascript'>
         $(function () {
-            $('.date-picker').datepicker();
+            $('.date-picker').datepicker({ dateFormat: 'dd-mm-yy' });
         })
     </script>
     <script type="text/javascript">
