--- a/Sprint123/WebUI/Views/UpcomingShow/Overview.cshtml
+++ b/Sprint123/WebUI/Views/UpcomingShow/Overview.cshtml
@@ -56,7 +56,7 @@
          @using (Html.BeginForm())
           {
             <p>
-                Zoek op film,genre of regisseur: @Html.TextBox("SearchString")
+                Zoek op film, genre, acteur of regisseur:@Html.TextBox("SearchString")
                 @*Of zoek op datum:   !!!Not functional!!!*@
                 @* @Html.TextBox("End", null, new { @class = "date-picker" })*@
                 <input type="submit" class="btn btn-success" value="Zoek films" />
