--- a/Sprint123/WebUI/Views/Reservation/DisplayReservation.cshtml
+++ b/Sprint123/WebUI/Views/Reservation/DisplayReservation.cshtml
@@ -46,7 +46,7 @@
                     }
                 </td>
                 <td>
-                    @Html.DisplayFor(x => item.Seat.SeatNumber)
+                    @Html.DisplayFor(x => item.SeatNumber)
                 </td>
             </tr>
     }
