--- a/Sprint123/WebUI/Views/Reservation/EmailReservation.cshtml
+++ b/Sprint123/WebUI/Views/Reservation/EmailReservation.cshtml
@@ -5,6 +5,13 @@
 }
 
 <body>
-    @Html.DisplayFor(x => Model.reservationID)
+    @using (Html.BeginForm())
+    {
+        <br />
+        <p><b>Jullie reserveringsnummer is @Html.DisplayFor(x => Model.ReservationID)</b></p><br />
+        <p>Voer je email adres in om de reservering te bevestigen!</p>
+        <p>@Html.TextBoxFor(x => Model.EmailAdress, new { @class = "formcontrol" })</p>
+        <input class="btn btn-success" type="submit" value="Reserveer" />
+    }
 </body>
 
