--- a/Sprint123/WebUI/Views/Reservation/Success.cshtml
+++ b/Sprint123/WebUI/Views/Reservation/Success.cshtml
@@ -7,7 +7,8 @@
     <div class="form-horizontal">
         <br />
         <br />
-        <h1><b>De betaling is geslaagd!</b></h1>
+        <h1><b>De bestelling is geslaagd!</b></h1><br />
+        <b>Check je mailbox voor je reserveringscode.</b><br />
         <button type="button" id="oneclick" class="btn btn-success" onclick="location.href='@Url.Action("PrintSessionTickets","Reservation", new { reservationID = Model.reservationID })';disableButton(this)">Print Tickets</button>
     </div>
 </body>
