--- a/Sprint123/WebUI/Views/Shared/_Layout.cshtml
+++ b/Sprint123/WebUI/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     @*<script src="~/Content/my-javascript.js"></script>*@
     @*<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>*@
+        <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>*@
     <link href="http://code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.min.css" rel="stylesheet" type="text/css" />
     <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="http://code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
@@ -25,6 +25,40 @@
         function disableButton(btn) {
             document.getElementById("oneclick").disabled = true;
         }
+    </script>
+    <script>
+        function initMap() {
+            var directionsService = new google.maps.DirectionsService;
+            var directionsDisplay = new google.maps.DirectionsRenderer;
+            var map = new google.maps.Map(document.getElementById('map'), {
+                zoom: 7,
+                center: { lat: 41.85, lng: -87.65 }
+            });
+            directionsDisplay.setMap(map);
+
+            var onChangeHandler = function () {
+                calculateAndDisplayRoute(directionsService, directionsDisplay);
+            };
+            document.getElementById('start').addEventListener('change', onChangeHandler);
+            document.getElementById('end').addEventListener('change', onChangeHandler);
+        }
+
+        function calculateAndDisplayRoute(directionsService, directionsDisplay) {
+            directionsService.route({
+                origin: document.getElementById('start').value,
+                destination: document.getElementById('end').value,
+                travelMode: 'DRIVING'
+            }, function (response, status) {
+                if (status === 'OK') {
+                    directionsDisplay.setDirections(response);
+                } else {
+                    window.alert('Directions request failed due to ' + status);
+                }
+            });
+        }
+    </script>
+    <script async defer
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD0p-i9A2ib2aqNKex48WhUJmIqqaHlNms&callback=initMap">
     </script>
 </head>
 <body>
@@ -47,6 +81,7 @@
     <nav class="nav-avans", style="height: 60px;">
         <div class="container"}>
             @Html.ActionLink("Avans Cinema", "Overview", "UpcomingShow", new { locationid = 1 }, new { @style = "color:black; padding: 10px; font-weight: bold;", @class = "navbar-brand" })
+            @Html.ActionLink("Contact", "Contact", "Contact")
             @if (ViewContext.HttpContext.Request.AppRelativeCurrentExecutionFilePath != "~/UpcomingShow/Overview" & ViewContext.HttpContext.Request.AppRelativeCurrentExecutionFilePath != "~/Home/Index")
             {
                  <input action="action" class="btn btn-success" style="float: right; padding:8px; margin-top:8px" type="button" value="Terug naar vorige scherm" onclick="window.history.go(-1); return false;" />
