--- a/Sprint123/WebUI/Views/Reservation/DisplayReservation.cshtml
+++ b/Sprint123/WebUI/Views/Reservation/DisplayReservation.cshtml
@@ -37,13 +37,13 @@
                 </td>
                 <td>
                     @if (item.Popcorn == true)
-                    {
-                         <p>Ja</p>
-                    }
-                    else
-                    {
-                         <p>Nee</p>
-                    }
+                {
+                    <p>Ja</p>
+            }
+            else
+            {
+                <p>Nee</p>
+        }
                 </td>
                 <td>
                     @Html.DisplayFor(x => item.SeatNumber)
@@ -52,7 +52,7 @@
     }
         </table>
         <button class="btn btn-success" type="button" id="oneclick" onclick="location.href = '@Url.Action("PrintReservationTickets", "Reservation", new { reservationID = Model.FirstOrDefault().ReservationID })';disableButton(this)">Print je tickets!</button>
-        <input action="action" class="btn btn-success" type="button" value="Start nieuwe bestelling" onclick="window.history.go(-2); return false;" />
-    </div>
-</body>
+        <!--<input action="action" class="btn btn-success" type="button" value="Start nieuwe bestelling" onclick="window.history.go(-2); return false;" />-->
+        </div>
+    </body>
 
