--- a/Sprint123/WebUI/Views/Reservation/DisplayTempReservation.cshtml
+++ b/Sprint123/WebUI/Views/Reservation/DisplayTempReservation.cshtml
@@ -21,6 +21,7 @@
                 <th scope="col">Prijs</th>
                 <th scope="col">Type</th>
                 <th scope="col">Popcorn inbegrepen?</th>
+                <th scope="col">Rijnummer</th>
                 <th scope="col">Stoelnummer</th>
             </tr>
             @foreach (var item in Model)
@@ -37,13 +38,16 @@
                 </td>
                 <td>
                     @if (item.Popcorn == true)
-                {
-                    <p>Ja</p>
-            }
-            else
-            {
-                <p>Nee</p>
-        }
+        {
+            <p>Ja</p>
+}
+else
+{
+            <p>Nee</p>
+}
+                </td>
+                <td>
+                    @Html.DisplayFor(x => item.RowNumber)
                 </td>
                 <td>
                     @Html.DisplayFor(x => item.SeatNumber)
