--- a/Sprint123/WebUI/Views/Reservation/Success.cshtml
+++ b/Sprint123/WebUI/Views/Reservation/Success.cshtml
@@ -8,10 +8,12 @@
         <br />
         <br />
         <h1><b>De bestelling is geslaagd!</b></h1><br />
-        <b>Check je mailbox voor je reserveringscode.</b><br /><br />
-        @if (Model.Paid == true) {
-             <button type="button" id="oneclick" class="btn btn-success" onclick="location.href='@Url.Action("PrintSessionTickets","Reservation", new { reservationID = Model.reservationID })';disableButton(this)">Print Tickets</button>
-        }
+        <b>Je reserveringscode is @Html.DisplayFor(x => Model.reservationID).</b><br /><br />
+        <b>In je mailbox heb je deze code ook ontvangen.</b><br /><br />
+        @if (Model.Paid == true)
+    {
+        <button type="button" id="oneclick" class="btn btn-success" onclick="location.href='@Url.Action("PrintSessionTickets","Reservation", new { reservationID = Model.reservationID })';disableButton(this)">Print Tickets</button>
+}
     </div>
 </body>
 
