description update, complete filtertest, reset movies button, sticky footer, filmweek, notavailable page with redirect.

--- a/Sprint123/WebUI/Content/menu.css
+++ b/Sprint123/WebUI/Content/menu.css
@@ -47,7 +47,8 @@ input {
 }
 
 .container {
-    margin: 0 auto
+    /*margin: 0 auto;*/ 
+    margin-bottom: 100px;
 }
 
 @media ( min-width : 1200px) {
