--- a/Sprint123/WebUI/Content/Site.css
+++ b/Sprint123/WebUI/Content/Site.css
@@ -1,12 +1,14 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
+    margin-bottom: 100px;
 }
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
+
 }
 
 /* Set width on the form input elements since they're 100% wide by default */
@@ -15,7 +17,12 @@ select,
 textarea {
     max-width: 280px;
 }
-
+.card-footer {
+    position: fixed;
+    bottom: 0px;
+    width: 100%;
+    height:100px;
+}
 /* Tooltip container */
 .tooltip {
     position: relative;
