--- a/Sprint123/WebUI/Views/Reservation/DisplayReservation.cshtml
+++ b/Sprint123/WebUI/Views/Reservation/DisplayReservation.cshtml
@@ -21,6 +21,7 @@
                 <th scope="col">Prijs</th>
                 <th scope="col">Type</th>
                 <th scope="col">Popcorn inbegrepen?</th>
+                <th scope="col">3D bril inbegrepen?</th>
                 <th scope="col">Rijnummer</th>
                 <th scope="col">Stoelnummer</th>
             </tr>
@@ -39,12 +40,22 @@
                 <td>
                     @if (item.Popcorn == true)
                 {
-                    <p>Ja</p>
-            }
-            else
-            {
-                <p>Nee</p>
-        }
+            <p>Ja</p>
+                }
+                else
+                {
+            <p>Nee</p>
+                }
+                </td>
+                <td>
+                    @if (item.Glasses == true)
+                {
+            <p>Ja</p>
+                }
+                else
+                {
+            <p>Nee</p>
+                }
                 </td>
                 <td>
                     @Html.DisplayFor(x => item.RowNumber)
